--- a/templates/components/post/post_detail.html
+++ b/templates/components/post/post_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %} {% load static %} {% load utils %}
-
+<div id="{{ post.id }}">
 <div class="flex flex-row w-full relative top-[10vh]">
   {% include 'components/leftbar.html'%}
 
@@ -64,57 +64,66 @@
           </div>
           <span class="post-content">{{ post.content }}</span>
           <!-- VOTES AND COMMENTS -->
-          <div>
-          <div class="flex flex-row gap-2">
-            <button
-              onclick="event.stopPropagation(); vote('{{post.id}}', 'upvote')"
-              class="z-50"
-              {% if not user.is_authenticated %}
-              disabled
-              {% endif %}
-            >
-              <svg
-                class="dark:fill-white"
-                width="16"
-                height="20"
-                viewBox="0 0 16 20"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g clip-path="url(#clip0_336_4807)">
-                  <path
-                    d="M10.2963 18.5602H5.69542C5.4574 18.5596 5.22925 18.4439 5.06094 18.2383C4.89263 18.0327 4.79789 17.7539 4.79747 17.4631V10.7452H1.69982C1.52557 10.74 1.35639 10.6724 1.21327 10.5509C1.07014 10.4293 0.959353 10.2591 0.894627 10.0614C0.811785 9.8498 0.780624 9.61351 0.804874 9.38084C0.829124 9.14816 0.907758 8.92895 1.03136 8.74946L7.329 0.359134C7.41375 0.245982 7.5169 0.155692 7.63186 0.0940402C7.74681 0.0323887 7.87103 0.000733998 7.99657 0.0011018C8.12211 0.00146961 8.24621 0.0338518 8.36092 0.0961762C8.47563 0.158501 8.57843 0.249394 8.66273 0.363041L14.9572 8.74556C15.0821 8.92506 15.1619 9.1449 15.1869 9.37855C15.2118 9.61221 15.1809 9.8497 15.0979 10.0624C15.0334 10.2599 14.9228 10.4299 14.78 10.5515C14.6372 10.673 14.4683 10.7407 14.2943 10.7462H11.1943V17.4641C11.1936 17.7547 11.0988 18.0332 10.9305 18.2386C10.7622 18.444 10.5342 18.5596 10.2963 18.5602ZM5.79697 17.3391H10.1948V9.52412H14.14L7.99587 1.27934L1.80537 9.52412H5.79697V17.3391ZM1.78058 9.55734L1.77099 9.57297C1.77898 9.5671 1.78218 9.5632 1.78058 9.55734Z"
-                    fill="black"
-                  />
-                </g>
-                <defs>
-                  <clipPath id="clip0_336_4807">
-                    <rect width="15.992" height="19.5374" fill="white" />
-                  </clipPath>
-                </defs>
-              </svg>
-            </button>
-            <h1 class="vote_count">{{ post|get_vote_counts}}</h1>
-            <button
-              onclick="event.stopPropagation(); vote('{{post.id}}', 'downvote')"
-              class="z-50"
-              {% if not user.is_authenticated %}
-              disabled
-              {% endif %}
-            >
-              <svg
-                width="16"
-                height="17"
-                viewBox="0 0 16 17"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M7.99952 16.6355C7.87366 16.6355 7.74922 16.608 7.63427 16.5548C7.51933 16.5016 7.41645 16.4239 7.33232 16.3268L1.03472 9.20538C0.909951 9.05291 0.830289 8.8663 0.805311 8.66799C0.780333 8.46968 0.811102 8.2681 0.893919 8.0875C0.958571 7.91977 1.06917 7.77537 1.21206 7.67212C1.35494 7.56888 1.52385 7.51132 1.69792 7.50656H4.79952V1.79929C4.79994 1.55225 4.89473 1.31545 5.06312 1.14077C5.23151 0.96608 5.45978 0.867748 5.69792 0.86731H10.3011C10.5393 0.867748 10.7675 0.96608 10.9359 1.14077C11.1043 1.31545 11.1991 1.55225 11.1995 1.79929V7.50656H14.2987C14.4731 7.511 14.6423 7.56841 14.7855 7.67168C14.9287 7.77494 15.0396 7.91952 15.1043 8.0875C15.1874 8.26749 15.2187 8.46853 15.1945 8.66652C15.1702 8.86451 15.0914 9.05103 14.9675 9.20372L8.66672 16.3318C8.58197 16.4277 8.47886 16.5043 8.36398 16.5566C8.2491 16.6089 8.12497 16.6358 7.99952 16.6355ZM1.85232 8.54395L7.99952 15.5484L14.1923 8.54395H10.1995V1.90469H5.79952V8.54395H1.85232ZM14.2275 8.50245C14.2195 8.50245 14.2163 8.50826 14.2179 8.51324L14.2275 8.50245Z"
-                  fill="black"
-                />
-              </svg>
-            </button>
+          <!-- VOTES-->
+          
+          <div class="flex flex-row gap-2 mt-4">
+            <div class="flex flex-row gap-2 px-3 py-1 rounded-xl bg-button_gray">
+                <button
+                    onclick="event.stopPropagation(); vote(this, '{{post.id}}', 'upvote')"
+                    class=""
+                    {% if not user.is_authenticated %}
+                    disabled
+                    {% endif %}
+                >
+                  <svg
+                    class="dark:fill-white"
+                    width="16"
+                    height="20"
+                    viewBox="0 0 16 20"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <g clip-path="url(#clip0_336_4807)">
+                      <path
+                        d="M10.2963 18.5602H5.69542C5.4574 18.5596 5.22925 18.4439 5.06094 18.2383C4.89263 18.0327 4.79789 17.7539 4.79747 17.4631V10.7452H1.69982C1.52557 10.74 1.35639 10.6724 1.21327 10.5509C1.07014 10.4293 0.959353 10.2591 0.894627 10.0614C0.811785 9.8498 0.780624 9.61351 0.804874 9.38084C0.829124 9.14816 0.907758 8.92895 1.03136 8.74946L7.329 0.359134C7.41375 0.245982 7.5169 0.155692 7.63186 0.0940402C7.74681 0.0323887 7.87103 0.000733998 7.99657 0.0011018C8.12211 0.00146961 8.24621 0.0338518 8.36092 0.0961762C8.47563 0.158501 8.57843 0.249394 8.66273 0.363041L14.9572 8.74556C15.0821 8.92506 15.1619 9.1449 15.1869 9.37855C15.2118 9.61221 15.1809 9.8497 15.0979 10.0624C15.0334 10.2599 14.9228 10.4299 14.78 10.5515C14.6372 10.673 14.4683 10.7407 14.2943 10.7462H11.1943V17.4641C11.1936 17.7547 11.0988 18.0332 10.9305 18.2386C10.7622 18.444 10.5342 18.5596 10.2963 18.5602ZM5.79697 17.3391H10.1948V9.52412H14.14L7.99587 1.27934L1.80537 9.52412H5.79697V17.3391ZM1.78058 9.55734L1.77099 9.57297C1.77898 9.5671 1.78218 9.5632 1.78058 9.55734Z"
+                        fill="black"
+                      />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_336_4807">
+                        <rect width="15.992" height="19.5374" fill="white" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </button>
+              
+                  <h1 class="vote_count"
+                  data-voted = "{% if post in user_upvoted_posts%}upvote{%elif post in user_downvoted_posts %}downvote{%endif%}">
+                  {{ post|get_vote_counts}}</h1>  
+              
+                
+                <button
+                  onclick="event.stopPropagation(); vote(this, '{{post.id}}', 'downvote')"
+                  {% if not user.is_authenticated %}
+                  disabled
+                  {% endif %}
+                >
+                  <svg
+                    width="16"
+                    height="17"
+                    viewBox="0 0 16 17"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M7.99952 16.6355C7.87366 16.6355 7.74922 16.608 7.63427 16.5548C7.51933 16.5016 7.41645 16.4239 7.33232 16.3268L1.03472 9.20538C0.909951 9.05291 0.830289 8.8663 0.805311 8.66799C0.780333 8.46968 0.811102 8.2681 0.893919 8.0875C0.958571 7.91977 1.06917 7.77537 1.21206 7.67212C1.35494 7.56888 1.52385 7.51132 1.69792 7.50656H4.79952V1.79929C4.79994 1.55225 4.89473 1.31545 5.06312 1.14077C5.23151 0.96608 5.45978 0.867748 5.69792 0.86731H10.3011C10.5393 0.867748 10.7675 0.96608 10.9359 1.14077C11.1043 1.31545 11.1991 1.55225 11.1995 1.79929V7.50656H14.2987C14.4731 7.511 14.6423 7.56841 14.7855 7.67168C14.9287 7.77494 15.0396 7.91952 15.1043 8.0875C15.1874 8.26749 15.2187 8.46853 15.1945 8.66652C15.1702 8.86451 15.0914 9.05103 14.9675 9.20372L8.66672 16.3318C8.58197 16.4277 8.47886 16.5043 8.36398 16.5566C8.2491 16.6089 8.12497 16.6358 7.99952 16.6355ZM1.85232 8.54395L7.99952 15.5484L14.1923 8.54395H10.1995V1.90469H5.79952V8.54395H1.85232ZM14.2275 8.50245C14.2195 8.50245 14.2163 8.50826 14.2179 8.51324L14.2275 8.50245Z"
+                      fill="black"
+                    />
+                  </svg>
+                </button>
+            </div>
+
+
             <!-- COMMENTS -->
             <div>
             <div class="flex flex-row gap-2">
@@ -136,7 +145,9 @@
                   </svg>   
                             
                 </button>
-              <h1 class="vote_count">{{ post|get_vote_counts }}</h1> <!-- show comment -->
+                  <h1 class="vote_count"
+                data-voted = "{% if post in user_upvoted_posts%}upvote{%elif post in user_downvoted_posts %}downvote{%endif%}"
+                >{{ post|get_comment_counts}}</h1>
             </div>
           </div>
           </div>
@@ -157,7 +168,7 @@
               </button>
               <button
                 class="inline-flex items-center px-2 py-1 bg-blue-600 text-white rounded-full hover:bg-blue-700 text-sm"
-                onclick="submitComment()"
+                onclick="submitComment('{{post.id}}')"
               >
                 Comment
               </button>
@@ -167,7 +178,7 @@
            <div id="comments-{{ postId }}" class="comments-section"></div>
                 <h3>Comments:</h3>
                 <ul class="comment-list">
-                {% for comment in comments %}
+                {% for comment in root_comments %}
                     <li id = {{comment.id}}>
                         <div class="w-[30px] h-[30px] rounded-full">
                             {% if comment.user.avatar%}
@@ -181,6 +192,7 @@
                             {% endif %}
                         </div>
                         <p>{{comment.content}}</p>
+                        <!-- child comments nigga-->
                     </li>
                 {% endfor %}
 
@@ -196,6 +208,7 @@
     </div>
   </div>
 </div>
+</div>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const postContents = document.querySelectorAll(".post-content");
@@ -205,43 +218,62 @@
   });
 
 
-  async function vote(postId, voteType) {
-    
-    fetch(`/post/vote/${postId}/${voteType}`, {
-      method: "POST",
-      headers: {
-        "X-CSRFToken": "{{ csrf_token }}",
-      },
-    }).then(async (response) => {
-      const data = await response.json();
-      console.log(data);
-      let vote_count = document.getElementById(postId).querySelector(".vote_count");
-      let current_vote_count = parseInt(vote_count.textContent, 10); 
-      
-      
-      // e fix ang same user gikan upvote to down, vice versa
-      if(voteType == "upvote"){
-        current_vote_count += 1;
-      }else{
-        current_vote_count -= 1;
-      }current_vote_count
+ async function vote(button, postId, voteType) {
+        await fetch(`/post/vote/${postId}/${voteType}`, {
+            method: "POST",
+            headers: {
+              "X-CSRFToken": "{{ csrf_token }}",
+            },
+        }).then(async (response) => {
+            const data = await response.json();
 
-      vote_count.textContent = current_vote_count;
+            let vote_count = document.getElementById(postId).querySelector(".vote_count");
+            let current_vote_count = parseInt(vote_count.textContent, 10); 
 
-    });
-  }
+            voted = vote_count.dataset.voted
+
+            if(voted == "upvote"){
+                if(voteType == "upvote"){
+                    current_vote_count -= 1 
+                    vote_count.dataset.voted = ""
+                }else{
+                    current_vote_count -= 2
+                    vote_count.dataset.voted = "downvote"
+                }
+            }else if (voted == "downvote"){
+                if(voteType == "downvote"){
+                    current_vote_count += 1
+                    vote_count.dataset.voted = ""
+                }else{
+                    current_vote_count += 2
+                    vote_count.dataset.voted = "upvote"
+                }
+            }else{
+                if(voteType == "downvote"){
+                    current_vote_count -= 1
+                    vote_count.dataset.voted = "downvote"
+                }else{
+                    current_vote_count += 1
+                    vote_count.dataset.voted = "upvote"
+                }
+            }
+            vote_count.textContent = current_vote_count
+        });
+    }
 
   async function cancelComment(postId, comment) {
     
   }
 
-  async function submitComment(postId) {
-  const commentBox = document.getElementById(`#commentBox`);
-  const comment = commentBox.value.trim(); // Get the comment text
 
-  if (!comment) {
-    alert("Comment cannot be empty.");
-    return;
+  async function submitComment(postId) {
+  const commentValue = null
+  const commentBox = document.getElementById("commentBox");
+  if (commentBox && commentBox.value) {
+    const commentValue = commentBox.value;
+    // Proceed with submitting the comment
+  } else {
+    console.error("Comment box is not found or has no value");
   }
 
   // Send the POST request to submit the comment
@@ -251,7 +283,7 @@
       headers: {
         "X-CSRFToken": "{{ csrf_token }}",
       },
-      body: JSON.stringify({ comment: comment })
+      body: JSON.stringify({ comment: commentValue })
     });
 
     if (response.ok) {
