--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,8 @@
                         txt_color_2: "#33363B",
                         txt_color_3: "#697075",
                         bg_1: "#F5F4F6",
+                        red: '#D83901',
+                        blue: '#6B5CFE'
                     }
                 }
             },
@@ -216,6 +218,7 @@
         } 
 
         function timeAgo(datetime) {
+            console.log(datetime)
             const currentDate = new Date();
             const createdAt = new Date(parseDateString(datetime));
             const timeDifference = currentDate.getTime() - createdAt.getTime();
@@ -225,6 +228,7 @@
             const day = hour * 24;
             const month = day * 30;
             const year = day * 365;
+            
 
             if (timeDifference < minute) {
                 return "Just now";
